# murm

./: .env.anthropic  .env.example  .env.groq  .env.openai  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  PARAMETERS.md  PUBLISHING.md  README.md  clean_decorators.py  docker-compose.yml  generate_demo_cache.py  pyproject.toml  pyrightconfig.json  render.yaml  report.md  setup_local.sh  test_browser.py  test_chroma.py  test_doc_industry.txt  test_doc_regulatory.txt  test_empty_chroma.py  test_graph.py  test_pipeline.py  test_user_seed.py
.github/workflows/: ci.yml  release.yml
data/: murm.db
data/chroma/: chroma.sqlite3
data/projects/0dee56a8-46bf-48b2-a723-4023a98e24d4/: graph.json
data/projects/278aa726-243c-4a43-a739-3b723c1f944b/: graph.json
data/projects/337565ec-5055-45f8-9b9f-92ea3a813d90/: graph.json
data/projects/3a5a814e-a623-493c-bd21-e3a6315425f5/: graph.json
data/projects/3bcca439-891e-4d3f-a35e-688927328880/: graph.json
demo/: demo_report 2.md  demo_report.md
frontend/: Dockerfile  evaluate_dom 2.js  index.html  nginx.conf  package 2.json  package-lock 2.json  package-lock 3.json  package-lock.json  package.json
frontend/src/: App.jsx
murm/: __init__.py  cli.py  config.py  main.py
murm/agents/: generator.py  interviewer.py  model.py
murm/analysis/: calibration.py  report_agent.py
murm/api/: app.py  store.py
murm/graph/: embedder.py  engine.py  extractor.py
murm/llm/: budget.py  provider.py
murm/simulation/: engine.py  environment.py  metrics.py  trace.py  web.py
murm/utils/: __init__.py  text.py
paper/: eval.py  eval_seeds.json  paper.tex  references.bib
tests/: test_core.py
(+82 files in other folders)
