[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murm"
version = "0.4.2"
description = "Multi-agent Uncertainty Resolution Machine - predict public opinion with local-first swarm intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akhilesh Magotra" }]
keywords = ["multi-agent", "simulation", "swarm-intelligence", "prediction", "llm", "public-opinion"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm>=1.40.0,!=1.82.7,!=1.82.8",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "networkx>=3.3",
    "chromadb>=0.5.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "chardet>=5.2.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
murm = "murm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["murm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
